- fixed vertical alignment of video thumbnails

--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -33,6 +33,7 @@
     display: inline-block;
     white-space: normal;
     margin-left: 10px;
+    vertical-align: top;
 
     &:first-child {
       margin-left: 0;
